--- a/templates/mentor_admin/admin_base.html
+++ b/templates/mentor_admin/admin_base.html
@@ -32,12 +32,12 @@
             </a>
         </li>
         <!-- Use 'startswith' check for student details to include sub-tabs -->
-        <li class="{% if '/student_detail/' in request.path or '/generate_qr_followup/' in request.path or '/followup_form/' in request.path or '/generate_qr/' in request.path or '/form/' in request.path or '/student_profile/' in request.path %}active{% endif %}">
+        {% comment %} <li class="{% if '/student_detail/' in request.path or '/generate_qr_followup/' in request.path or '/followup_form/' in request.path or '/generate_qr/' in request.path or '/form/' in request.path or '/student_profile/' in request.path %}active{% endif %}">
             <a href="/mentor_admin/student_detail/">
                 <i class='bx bxs-group'></i>
                 <span class="text">Students Detail</span>
             </a>
-        </li>
+        </li> {% endcomment %}
         
         <li class="{% if request.path == '/mentor_admin/sessions/' %}active{% endif %}">
             <a href="/mentor_admin/sessions/">
