--- a/templates/form_student_view.html
+++ b/templates/form_student_view.html
@@ -227,7 +227,7 @@
                  {% endfor %}
                 </ul>
                 {% endif %}
-                {% if not student.studentform.profile_picture %}
+                {% if not student1.profile_picture %}
                 <label for="profile-picture">Profile Picture</label>
                 <input type="file" id="profile-picture" name="profile_picture" accept="image/*">
                 {% endif %}
